outputs/csi500-test/treevoo/2025-07-28_01-48-49/problem_iter40_response3.txt_stdout.txt
Traceback (most recent call last):
  File "/home/renjunji_2023/reevo/problems/csi500/eval.py", line 9, in <module>
    import gpt
  File "/home/renjunji_2023/reevo/problems/csi500/gpt.py", line 2
    # Calculate daily returns
                             ^
IndentationError: expected an indented block after function definition on line 1
